# hypercube

./: README.md
univarization/: Cargo.toml  README.md
univarization/src/: bcho_pcs.rs  bits.rs  fftunipoly.rs  gemini.rs  groupsim.rs  kzg10.rs  lib.rs  mle.rs  ph23.rs  ph23_pcs.rs  snark.rs  sumcheck.rs  transcript.rs  unipoly.rs  unisumcheck.rs  zeromorph.rs
univarization/src/mle/: coeffs_sparse.rs  evals.rs  evals_sparse.rs  mod.rs
