[package]
name = "univarization"
version = "0.1.0"
edition = "2021"

[dependencies]

ark-std = { version = "0.3", features = ["std"] }
ark-ec = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-poly = { version = "0.3" }
ark-poly-commit = { version = "0.3" }
ark-bn254 = { version = "0.3.0" }
merlin = { version = "3.0", default-features = false }
sha3 = { version = "0.10", default-features = false }

log = { version = "0.4" }
env_logger = { version = "0.10" }